# julien-tierny.github.io

./: README.md  habilitationAnnouncement.txt  index.html  misc.html  oldStyle.css  sinamis.html  sinamis_download.html  style.css  teaching.html  topologicalDataAnalysisClass.html  visualizationClass.html  visualizationExercise3dProgramming.html  visualizationExerciseDataParty.html  visualizationExerciseIso.html  visualizationExerciseParaView.html  visualizationExerciseParaviewConversion.html
img/: .directory  teaser22.xcf  teaser23.xcf  teaser24.xcf
img/frames/: .directory  NOTES
img/frames/background/: .directory
img/frames/png/: .directory
private/: seminar.html  seminar2019.html  seminar_enseirb.html  seminar_tda.html
stuff/papers/: compress.sh
stuff/software/: gueunet_egpgv19_code.md
stuff/software/FTC/: .vimmic_config  CMakeLists.txt  LICENSE  README.md
stuff/software/FTC/core/base/: CMakeLists.txt
stuff/software/FTC/core/base/common/: Os.h
stuff/software/FTC/core/base/ftcTree/: AtomicUF.h  AtomicVector.h  CMakeLists.txt  DataTypes.h  FTCCommon.h  FTCTree.cpp  FTCTree_CT.cpp  FTCTree_MT.cpp  FTCTree_MT.h  Node.h  Scalars.h  Segmentation.cpp
stuff/software/FTC/core/vtk/ttkFTCTree/: CMakeLists.txt  ttkFTCStructures.h  ttkFTCTree.cpp  ttkFTCTree.h
stuff/software/FTC/core/vtk/ttkUserInterfaceBase/: ttkUserInterfaceBase.cpp
stuff/software/FTC/standalone/FTCTree/cmd/: CMakeLists.txt  Editor.cpp  Editor.h
